fix security config and show swagger-ui